Update html file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="header">
+        <img class="logo" src="images/logo_adalab_155x61.png" alt="Adalab logo">
+
+        <nav class="menu">
+            <div class="menu_item">BLOG</div>
+            <div class="menu_item">CONTACTO</div>
+        </nav>
+    </header>
+
+    <main class="content">
+        <h1 class="title">Creando Diversidad Digital</h1>
+    </main>
 </body>
 </html>
