Update initial styles and add container in header

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="styles/style.css">
     <title>Document</title>
 </head>
-<body>
+<body class="page">
     <header class="header">
-        <img class="logo" src="images/logo_adalab_155x61.png" alt="Adalab logo">
+        <div class=logo__box>
+            <img class="logo__image" src="images/logo_adalab_155x61.png" alt="Adalab logo">
+        </div>
 
         <nav class="menu">
             <div class="menu_item">BLOG</div>
