Change menu to a list and update header alignment

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <img class="logo__image" src="images/logo_adalab_155x61.png" alt="Adalab logo">
         </div>
 
-        <nav class="menu">
-            <div class="menu_item">BLOG</div>
-            <div class="menu_item">CONTACTO</div>
-        </nav>
+        <ul class="menu">
+            <li class="menu_item">BLOG</li>
+            <li class="menu_item">CONTACTO</li>
+        </ul>
     </header>
 
     <main class="content">
