Add links to menu and media query for screen size

--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
         </div>
 
         <ul class="menu">
-            <li class="menu_item">BLOG</li>
-            <li class="menu_item">CONTACTO</li>
+            <li class="menu_item">
+                <a href="">BLOG</a>
+            </li>
+            <li class="menu_item">
+                <a href="">CONTACTO</a>
+            </li>
         </ul>
     </header>
 
