--- a/index.html
+++ b/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
-    <title>Document</title>
+    <title>Adalab-Creando Diversidad Digital</title>
 </head>
 <body class="page">
     <header class="header">
         <div class=logo__box>
-            <img class="logo__image" src="images/logo_adalab_155x61.png" alt="Adalab logo">
+            <a class="logo__image__link" href="#home"><img class="logo__image" src="images/logo_adalab_155x61.png" alt="Adalab logo"></a>
         </div>
 
-        <ul class="menu">
-            <li class="menu_item">
-                <a href="">BLOG</a>
-            </li>
-            <li class="menu_item">
-                <a href="">CONTACTO</a>
-            </li>
-        </ul>
+        <nav>
+            <ul class="menu">
+                <li class="menu_item">
+                    <a class="menu_item_link" href="#blog">blog</a>
+                </li>
+                <li class="menu_item">
+                    <a class="menu_item_link" href="#contacto">contacto</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <main class="content">
-        <h1 class="title">Creando Diversidad Digital</h1>
+        <h1 class="title">creando diversidad digital</h1>
     </main>
 </body>
 </html>
