Correct logo box class

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="page">
     <header class="header">
-        <div class=logo__box>
+        <div class="logo__box">
             <a class="logo__image__link" href="#home"><img class="logo__image" src="images/logo_adalab_155x61.png" alt="Adalab logo"></a>
         </div>
 
