Fix header for mobile version

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 </head>
 <body class="page">
     <header class="header">
-        <div class="logo__box">
             <a class="logo__image__link" href="#home"><img class="logo__image" src="images/logo_adalab_155x61.png" alt="Adalab logo"></a>
-        </div>
 
         <nav>
             <ul class="menu">
@@ -27,7 +25,9 @@
     </header>
 
     <main class="content">
-        <h1 class="title">creando diversidad digital</h1>
+        <div class="content__container">
+            <h1 class="title">creando diversidad digital</h1>
+        </div>
     </main>
 </body>
 </html>
